Tue Apr 24 23:51:00 2001  Corinna Vinschen <corinna@vinschen.de>

	* passwd.cc (getpwnam_r): Add pw_passwd handling as well.
	(getpwuid_r): Ditto.

Tue Apr 24 23:43:00 2001  Corinna Vinschen <corinna@vinschen.de>

	* passwd.cc (getpwnam_r): Use correct offsets into buffer.
	Copy pw_gecos field as well.
	(getpwuid_r): Ditto.

2001-04-24  Egor Duda  <deo@logos-m.ru>

	* dlmalloc.c: New file. Port of Doug Lea's malloc
	* dlmalloc.h: Ditto.
	* Makefile.in: Add support for MALLOC_DEBUG
	* config.h.in: Ditto.
	* winsup.h: Ditto.
	* configure.in: Add --enable-malloc-debugging option.
	* configure: Regenerate.
	* debug.h: Include declarations for debugging malloc.
	* tty.cc (grantpt): Fix definition.
	(unlockpt): Ditto.

Mon Apr 23 22:00:29 2001  Christopher Faylor <cgf@cygnus.com>

	Remove trailing underscore from fhandler_base and friends, throughout.
	* fhandler.h (fhandler_base::set_open_status): New method.  Stores
	original open status.
	(fhandler_base::get_open_status): New method.  Retrieves original open
	status.
	(fhandler_base::reset_to_open_binmode): New method.
	* fhandler.cc (fhandler_base::open): Save open status.
	(fhandler_base::init): Ditto.
	* fhandler_clipboard.cc (fhandler_clipboard::open): Ditto.
	* fhandler_console.cc (fhandler_console::open): Ditto.
	* fhandler_dsp.cc (fhandler_dsp::open): Ditto.
	* fhandler_dev_mem.cc (fhandler_dev_mem::open): Ditto.
	* fhandler_dev_random.cc (fhandler_dev_random::open): Ditto.
	* fhandler_serial.cc (fhandler_serial::open): Ditto.
	* fhandler_tty_slave.cc (fhandler_tty_slave::open): Ditto.
	* fhandler_tty_master.cc (fhandler_tty_master::open): Ditto.
	* fhandler_dev_zero.cc (fhandler_dev_zero::open): Ditto.
	* syscalls.cc (setmode): Rework so that 0 mode value causes reversion
	to open state.

	* fhandler_tty_slave.cc (fhandler_tty_slave::read): Use correct
	multiplier when converting from deciseconds to milliseconds.

Mon Apr 23 13:28:35 2001  Christopher Faylor <cgf@cygnus.com>
